@@ -219,11 +219,9 @@ glyphlistdata_DATA = \
 	$(DVIPDFMX_TREE)/data/glyphlist.txt \
 	$(DVIPDFMX_TREE)/data/pdfglyphlist.txt
 
-## Don't install the map file
-##
-##mapdatadir = ${prefix}/texmf/fonts/map/dvipdfmx
-##mapdata_DATA = \
-##	$(DVIPDFMX_TREE)/data/cid-x.map
+mapdatadir = ${prefix}/texmf/fonts/map/dvipdfmx
+mapdata_DATA = \
+	$(DVIPDFMX_TREE)/data/cid-x.map
 
 cmapdatadir = ${prefix}/texmf/fonts/cmap/dvipdfmx
 cmapdata_DATA = \
